Change dir for debug target also.

--- a/Makefile.arm
+++ b/Makefile.arm
@@ -98,7 +98,7 @@ debugd:
 		-f $(OPENOCD_SCRIPTS)/target/$(OPENOCD_TARGET)
 
 debug:
-	$(DB) -x arm-debug.gdb skel.elf
+	$(DB) -x arm-debug.gdb $(BUILD_DIR)/skel.elf
 
 upload:
 	$(OPENOCD) -f $(OPENOCD_SCRIPTS)/interface/$(OPENOCD_INTERFACE)\
