Add struct to support more than one byte of data on CAN frame.

--- a/Makefile.arm
+++ b/Makefile.arm
@@ -42,6 +42,7 @@ DRIVERS_INC = -I./drv
 DRIVERS = drv/gpio.o
 DRIVERS += drv/usart.o
 DRIVERS += drv/spi.o
+DRIVERS += drv/can.o
 DRIVERS += drv/mcp2515.o
 
 all: build size
