Change LOCALBASE based on the OS.
Do not overengineer for now, since this will serve most people for now.

--- a/Makefile.arm
+++ b/Makefile.arm
@@ -1,6 +1,13 @@
 CPU=cortex-m3
 
+
+OS != uname -s
+.if $(OS) == OpenBSD
 LOCALBASE = /usr/local
+.else
+LOCALBASE = /usr
+.endif
+
 MAKEOBJDIR = obj
 
 # toolchain
