--- a/Makefile.arm
+++ b/Makefile.arm
@@ -122,7 +122,7 @@ elf: $(PROG).elf
 		-g -static -mcpu=$(CPU)\
 		-Wl,-Map,$(<:R).map,--gc-sections,--cref\
 		-Wl,--start-group -lc -lgcc -lnosys -Wl,--end-group\
-		-T $(.CURDIR)/ld/stm32f1.ld\
+		-T $(.CURDIR)/ld/stm32f103c8tx_flash.ld\
 		-o $@
 
 startup-stm32f1.o:
