--- a/Makefile.arm
+++ b/Makefile.arm
@@ -111,6 +111,7 @@ elf: $(PROG).elf
 # XXX: generates correct code only with -Os and -Og, not with -O0, -O1, etc.
 .c.o:
 	$(CC) -g -Og -c -mcpu=$(CPU) \
+		-Wall \
 		$(STM32_CMSIS_INC) \
 		$(STM32_HAL_INC) \
 		$(DRIVERS_INC) \
@@ -119,6 +120,7 @@ elf: $(PROG).elf
 
 .o.elf:
 	$(CC) $(.OBJDIR)/*.o \
+		-Wall \
 		-g -static -mcpu=$(CPU) \
 		-Wl,-Map,$(<:R).map,--gc-sections,--cref \
 		-Wl,--start-group -lc -lgcc -lnosys -Wl,--end-group \
