Change linker script to an openocd board
This was changed previously to port to the newer OpenOCD 0.11.0 but only
now adjusting the config file.

--- a/Makefile.arm
+++ b/Makefile.arm
@@ -182,7 +182,7 @@ startup-stm32f1.o:
 .PHONY: download size disasm tags debugd debug
 debugd:
 	$(OPENOCD) -f $(OPENOCD_SCRIPTS)/interface/$(OPENOCD_INTERFACE) \
-		-f $(OPENOCD_SCRIPTS)/target/$(OPENOCD_TARGET)
+		-f $(OPENOCD_SCRIPTS)/board/$(OPENOCD_TARGET)
 
 debug:
 	$(DB) -x ../arm-debug.gdb $(.OBJDIR)/$(PROG).elf
